# rl-implementation-practice

./: README.md  pyproject.toml  vanilla_policy_gradient.py  vpg-lunar-lander-train.py  vpg_competitive.py  vpg_lunar_lander_agent.pkl  vpg_lunar_lander_run.py  vpg_lunar_lander_train.py  vpg_zilch_train.py
zilch/: test_zilch_scorer.py  zilch_env.py  zilch_scorer.py
