[project]
name = "RL-implementations"
version = "0.1.0"
description = "Practicing implementing some RL algorithms in pytorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d]>=1.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
